--- a/DataJam.ipynb
+++ b/DataJam.ipynb
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "4e30a9b8",
+   "id": "ac8a49c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "bfd78d8c",
+   "id": "0c97801e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "10d9fe3a",
+   "id": "8bb43920",
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d5316a68",
+   "id": "766f789c",
    "metadata": {},
    "outputs": [
     {
@@ -1678,7 +1678,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0dba74ac",
+   "id": "01ab5168",
    "metadata": {},
    "outputs": [
     {
@@ -2016,8 +2016,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "73c80817",
+   "execution_count": 63,
+   "id": "fa345179",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2025,7 +2025,9 @@
     "data = ZipFile(\"Parrilla_programacion_8.zip\", 'w')\n",
     "data.write(\"Datos.csv\", compress_type=ZIP_DEFLATED)\n",
     "data.write(\"Parrilla_programacion_8.csv\", compress_type=ZIP_DEFLATED)\n",
-    "data.close()"
+    "data.close()\n",
+    "os.remove(\"Datos.csv\")\n",
+    "os.remove(\"Parrilla_programacion_8.csv\")"
    ]
   },
   {
